--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ defusedxml==0.6.0
 diff-match-patch==20200713
 docopt==0.6.2
 docutils==0.16
-entrypoints @ flake8==3.8.4
+flake8==3.8.4
 Flask==1.1.2
 gunicorn==20.0.4
 helpdev==0.7.1
